# cs-kernel

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cs/: __init__.py  __main__.py  _time.py  auth.py  campaign.py  campaign_pack.py  cli.py  config.py  cron.py  drive.py  filter.py  gmail_archive.py  gmail_drafts.py  manifest.py  project_init.py  project_update.py  resolve.py  review.py  rpc.py  send_mail.py  sms.py  state.py  unanswered.py
cs/crm/: __init__.py  none.py  shopify.py  starchat.py
cs/ingest/: __init__.py  mrcall_tracking.py  none.py
cs/scripts/: __init__.py  find_profile_uid.py
cs/templates/project/: .env.example.j2  .gitignore.j2  CLAUDE.md.j2  README.md.j2  manifest.toml.j2  requirements.txt.j2
cs/templates/project/.claude/: settings.json.j2
cs/templates/project/.claude/commands/: analyze-account.md.j2  cs-review.md.j2  doc-endsession.md.j2  doc-intrasession.md.j2  doc-startsession.md.j2  munchausen.md.j2
cs/templates/project/.claude/skills/campaign-tick/: SKILL.md.j2
cs/templates/project/.claude/skills/cs-operator/: SKILL.md.j2
cs/templates/project/.claude/skills/customer/: SKILL.md.j2
cs/templates/project/.claude/skills/find-document/: SKILL.md.j2
cs/templates/project/.claude/skills/triage-support-mail/: SKILL.md.j2
cs/templates/project/campaigns/: README.md.j2
cs/templates/project/company/: README.md.j2  campaign-product-notes.md.j2  claude-extra.md.j2  drive-visible-note.md.j2  operator-out-of-scope.md.j2  triage-answerable.md.j2  triage-domain-examples.md.j2
cs/templates/project/docs/: ARCHITECTURE.md.j2  active-context.md.j2  general-operator-plan.md.j2
cs/templates/project/docs/customers/: README.md.j2
cs/templates/project/docs/projects/: README.md.j2
docs/: .doc-profile  README.md  active-context.md  harness-backlog.md  known-issues-and-solutions.md  quality-grades.md
tests/: run.sh  test_config.py  test_draft_reply.py  test_golden_pack.py  test_pack.py  test_tasks_verbs.py  test_unanswered.py
